--- a/static/admin_health.css
+++ b/static/admin_health.css
@@ -86,6 +86,7 @@
 }
 
 .row-actions .button {
+    display: inline-flex;
     padding: 0.2rem 0.55rem;
     font-size: 0.7rem;
     white-space: nowrap;
